--- a/build.xml
+++ b/build.xml
@@ -66,6 +66,13 @@ The COOJA Simulator
     </echo>
   </target>
 
+  <!-- Jar files downloaded from:
+       https://repo1.maven.org/maven2/com/google/errorprone/error_prone_core/ -->
+  <path id="processorpath.ref">
+    <pathelement location="${lib}/error_prone_core-2.14.0-with-dependencies.jar"/>
+    <pathelement location="${lib}/dataflow-errorprone-3.15.0.jar"/>
+  </path>
+
   <target name="init">
     <tstamp/>
   </target>
@@ -93,9 +100,23 @@ The COOJA Simulator
   <target name="compile" depends="init">
     <mkdir dir="${build}"/>
     <javac srcdir="${java}" destdir="${build}" debug="on" release="11"
-           includeantruntime="false"
+           includeantruntime="false" fork="yes"
            encoding="utf-8">
       <classpath refid="cooja.classpath"/>
+      <compilerarg value="-XDcompilePolicy=simple"/>
+      <compilerarg value="-processorpath"/>
+      <compilerarg pathref="processorpath.ref"/>
+      <compilerarg value="-Xplugin:ErrorProne -Xep:DeadException:ERROR" />
+      <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED" />
+      <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED" />
+      <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED" />
+      <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED" />
+      <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED" />
+      <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED" />
+      <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED" />
+      <compilerarg value="-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED" />
+      <compilerarg value="-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED" />
+      <compilerarg value="-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED" />
     </javac>
   </target>
 
